@@ -149,6 +149,16 @@ class Pidgin_beta(_apt_install):
     category = 'internet'
     depends = Repo_Pidgin_Develop
     pkgs = 'pidgin'
+    def installed(self):
+        f = get_output('pidgin -v')
+	v = f.split(' ', 2)
+	if v[1] < '2.6.6': return False
+	else: return True
+    def install(self):
+        if APT.installed('pidgin'):
+	    run_as_root('apt-get upgrade pidgin')
+	else:
+	    APT.install('pidgin')
 
 class PlayOnLinux(_apt_install):
     __doc__ = _('PlayOnLinux: A graphical front-end for wine')
